# OMC

./: .gitignore  00-START-HERE.md  ADVANCEMENT_SUMMARY.md  ARCHITECTURE.md  BENCHMARKS.md  BUILD.md  BUILD_TARGETS.md  CHANGELOG.md  CLAUDE.md  CODE_SIGNING.md  COMPLETION_REPORT.md  COMPLETION_REPORT_PHASE_0.txt  Cargo.toml  DEVELOPER.md  FINAL_STATUS.txt  FINAL_VERIFICATION_SUMMARY.txt  HBIT_CODE_STATE.md  HBIT_INTEGRATION.md  IMPROVEMENT_PLAN.md  INDEX.md  LICENSE  OMC-PROTOCOL.md  OMC_REFERENCE.md  OMC_STRATEGIC_PLAN.md  PHASE_0_COMPLETE.md  PHI_DISK.md  PHI_PI_FIB_ALGORITHM.md  PROJECT_STATUS.md  PROJECT_STATUS.txt  READING_ORDER.md  README.md  RELEASE_BODY_v1.0.0.md  ROADMAP.json  ROADMAP.md  STDLIB.md  SUBSTRATE_CHANGES.md  SUMMARY.txt  TIER1_COMPLETE.md  TIER3_COMPLETE.md  TIER_4_COMPLETE.md  (+9 more)
.cargo/: config.toml
.github/workflows/: build-binaries.yml  ci.yml  deploy-docs.yml  publish-crates.yml  test.yml
AGENT_TASKS/: merge_all.sh  task_01_llm_call.md  task_02_eval_omc.md  task_03_par_map.md  task_04_http_native.md  task_05_introspection.md  task_06_llm_omc.md  task_07_cache_omc.md  task_08_graph_omc.md  task_09_text_omc.md  task_10_cli_omc.md  task_11_schema_omc.md  task_12_self_improving_agent.md  task_13_substrate_rag.md  task_14_code_gen_loop.md  task_15_recursive_improve.md  task_16_omc_fmt.md  task_17_omc_doc.md  task_18_repl_v2.md  task_19_omc_check.md  task_20_benchmark_dashboard.md  task_21_package_system.md  task_22_mcp_tool_gen.md  task_23_llm_tools.md  task_24_llm_stream.md  task_25_auto_improve_daemon.md  task_26_population_evolve.md  task_27_substrate_embed_builtin.md  task_28_omc_spawn.md  task_29_batch_llm.md  task_30_code_evolution_loop.md  task_33_http_builtins.md  task_34_introspection_builtins.md  task_58_omc_spawn.md  task_59_batch_llm.md
artifacts/: BINARY_MANIFEST.md
benches/: genetic_algorithm.rs  genetic_algorithm_bench.rs
docs/: SUBSTRATE_NATIVE_AGENT.md  anomaly_detection.md  heal_pass.md  jit_benchmark.md  jit_real_world.md  omc_grep.md  omc_kernel.md  omcs_format.md  onboarding_token.json
docs/archive/: COMPLETION_SUMMARY.md  FINAL_DELIVERY.md  FINAL_SUMMARY.md  HBIT_API_VERIFICATION.md  HBIT_CORRECTED.md  HBIT_FINAL_STATUS.md  HBIT_ISSUES_RESOLVED.md  OMC_STRATEGIC_PLAN_INDEX.txt  PHASE_0_INDEX.md  PHASE_0_SUMMARY.txt  README_TIER4.md  README_VERIFICATION.md  START_HERE.txt  STRATEGIC_PLAN_COMPLETION_SUMMARY.txt  TIER2_COMPLETE.md  TIER_4_SUMMARY.txt  VERIFICATION_INDEX.md
examples/: array_ops.omc  bench_prometheus_gpu.omc  benchmarks.omc  fibonacci.omc  fibtier_conversation.omc  harmonic_collections.omc  harmonic_variants.js  harmonic_variants.omc  heal_pass_demo.omc  hello_world.omc  json.omc  lisp.omc  log_analyzer.omc  loops.omc  math_module.omc  module_demo.omc  omc-runtime.js  phi_field_llm_demo.omc  phi_field_llm_multilayer.omc  polish_round.omc  prometheus_L0_vs_L1.omc  prometheus_attention_4way.omc  prometheus_attention_ab.omc  prometheus_cache.omc  prometheus_checkpoint.omc  prometheus_generate.omc  prometheus_geodesic_bias.omc  prometheus_grad_mod_reformulations.omc  prometheus_harmonic_sgd.omc  prometheus_mh_q6_compound.omc  prometheus_mh_xval.omc  prometheus_q6_ab.omc  prometheus_q6_post_train_sparsity.omc  prometheus_q6_scale_test.omc  prometheus_sparse_attn_bench.omc  prometheus_substrate_grad_mod_xval.omc  prometheus_substrate_init_xval.omc  prometheus_substrate_larger_scale.omc  prometheus_substrate_quant_6seed.omc  prometheus_substrate_stack_xval.omc  (+30 more)
examples/circuit-trainer/: Cargo.toml  README.md
examples/circuit-trainer/src/: main.rs
examples/datascience/: anomaly_attack_zoo.omc  anomaly_detection.omc  anomaly_tutorial.omc  harmonic_ml.omc  movielens_harmonic.omc  multidim_anomaly.omc  nab_time_aware.omc  nab_validation.omc  nsl_kdd_v1_vs_v2.omc  nsl_kdd_validation.omc  titanic.omc
examples/demos/: CONTEXT_PROBLEM_FRAMING.md  GEODESIC_RECONSTRUCTION_NOTES.md  SESSION_SUMMARY.md  (+46 more)
examples/modding-tool/: Cargo.toml  README.md
examples/modding-tool/src/: c_export.rs  json_export.rs  main.rs  rust_export.rs
omnimcode-apiproxy/: Cargo.toml  README.md
omnimcode-apiproxy/src/: main.rs
omnimcode-cli/: Cargo.toml
omnimcode-cli/src/: bench.rs  main.rs
omnimcode-codegen/: Cargo.toml
omnimcode-codegen/src/: dual_band.rs  lib.rs
omnimcode-codegen/tests/: dual_band_ir_shape.rs  jit_array_bridge.rs  jit_array_return_bridge.rs  jit_arrays.rs  jit_cross_fn_calls.rs  jit_dispatch_integration.rs  jit_dual_band.rs  jit_floats.rs  jit_harmonic_intrinsics.rs  jit_harmony.rs  jit_phi_shadow.rs  jit_roundtrip.rs
omnimcode-core/: Cargo.toml
omnimcode-core/benches/: interpreter_bench.rs
omnimcode-core/src/: accel.rs  ast.rs  bytecode.rs  bytecode_opt.rs  canonical.rs  circuits.rs  code_intel.rs  compiler.rs  disasm.rs  docs.rs  errors.rs  evolution.rs  formatter.rs  hbit.rs  http_builtins.rs  interpreter.rs  lib.rs  llm_builtins.rs  llm_workflow.rs  main.rs  memory.rs  onn.rs  optimizer.rs  parser.rs  phi_pi_fib.rs  predict.rs  process_builtins.rs  python_embed.rs  tokenizer.rs  value.rs  vm.rs
omnimcode-core/src/prometheus/: README.md  mod.rs
omnimcode-core/tests/: conformance.rs  error_quality.rs  heal_pass.rs  host_builtins.rs
omnimcode-ffi/: Cargo.toml
omnimcode-ffi/src/: lib.rs
omnimcode-gdextension/: README.md  SUMMARY.md  godot.bindings
omnimcode-gpu/: Cargo.toml  README.md
omnimcode-gpu/examples/: bench_fib_tile.rs  bench_matmul.rs
omnimcode-gpu/shaders/: matmul.wgsl
omnimcode-gpu/src/: cpu.rs  lib.rs  wgpu_backend.rs
omnimcode-js/: Cargo.toml
omnimcode-js/src/: lib.rs  main.rs
omnimcode-lsp/: Cargo.toml
omnimcode-lsp/src/: main.rs
omnimcode-mcp/: Cargo.toml  README.md
omnimcode-mcp/src/: main.rs
omnimcode-mcp/tests/: integration.rs
omnimcode-python/: Cargo.toml
omnimcode-python/src/: lib.rs
omnimcode-wasm/: Cargo.toml  README.md
omnimcode-wasm/src/: lib.rs
registry/: README.md  index.json
scripts/: bump-version.sh  generate-release-notes.sh  test-integration.sh
src/: circuit_dsl.rs  evolution.rs  lib.rs  main.rs  optimizer.rs  phi_disk.rs  phi_pi_fib.rs
(+314 files in other folders)
