[workspace]
members = [
    "omnimcode-core",
    "omnimcode-ffi",
    "omnimcode-python"
]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["The Architect <architect@sovereign-lattice.io>"]
license = "MIT"

# Shared profile settings for all workspace members
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
