[workspace]
members = [
    "omnimcode-core",
    "omnimcode-ffi",
    "omnimcode-wasm",
    "omnimcode-lsp",
    "omnimcode-codegen",
]
# omnimcode-python kept around but excluded from the default workspace.
# It was the "Python embeds OMC" wrapper (extension-module mode); now
# eclipsed by the python-embed feature on omnimcode-core, which goes
# the other way (OMC embeds Python). Building it would conflict with
# python-embed because both crates would `links = "python"`. Build it
# separately via `cargo build -p omnimcode-python` if needed.
exclude = ["omnimcode-python"]
resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["The Architect <architect@sovereign-lattice.io>"]
license = "MIT"

# Shared profile settings for all workspace members
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 1
