[package]
name = "omnimcode-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OMNIcode standalone CLI — links the tree-walk interpreter, bytecode VM, optional Python embedding, and (under llvm-jit) the LLVM-backed dual-band JIT into one binary."

# Preserve the historical binary name so scripts that invoke
# `omnimcode-standalone` keep working after the Session D.5 split.
[[bin]]
name = "omnimcode-standalone"
path = "src/main.rs"

# Session E bench harness — compares tree-walk, bytecode VM, and
# dual-band JIT execution times for a hot OMC fn. Only meaningful
# with `--features llvm-jit` (otherwise JIT mode short-circuits to
# tree-walk).
[[bin]]
name = "omc-bench"
path = "src/bench.rs"
required-features = ["llvm-jit"]

# Code-archaeology tool: walks a tree, extracts top-level fns, clusters
# by canonical hash + substrate distance. The alpha-rename-invariant
# duplicate finder. Doesn't depend on JIT or Python.
[[bin]]
name = "omc-grep"
path = "src/bin/omc_grep.rs"

# Content-addressed store keyed by canonical hash. The distributed-agent
# kernel primitive: code as a content-addressed Merkle DAG over
# substrate-canonical addresses. Uses serde_json for wire format.
[[bin]]
name = "omc-kernel"
path = "src/bin/omc_kernel.rs"

[features]
default = ["python-embed", "native-llm"]
# CPython embedding for `py_*` builtins. Forwards to core.
python-embed = ["omnimcode-core/python-embed"]
native-llm = ["omnimcode-core/native-llm"]
# LLVM-backed dual-band JIT. When set at compile time, the CLI
# consults `OMC_HBIT_JIT=1` at runtime; if also set, eligible user
# fns are routed through omnimcode-codegen instead of tree-walk/VM.
llvm-jit = ["dep:omnimcode-codegen", "dep:inkwell"]
# GPU matmul acceleration via omnimcode-gpu's wgpu backend. When set,
# the CLI registers a matmul accelerator at startup that routes
# tape_matmul calls above the CPU/GPU crossover (default ~128³ FLOPS,
# tunable via `OMC_GPU_MATMUL_MIN_FLOPS`) through Vulkan/Metal/DX12.
# Honored if `OMC_GPU_BACKEND != "cpu"` (default = wgpu when built in).
gpu = ["dep:omnimcode-gpu"]

[dependencies]
omnimcode-core = { path = "../omnimcode-core", default-features = false }
omnimcode-codegen = { path = "../omnimcode-codegen", optional = true, features = ["llvm-jit"] }
omnimcode-gpu = { path = "../omnimcode-gpu", optional = true, features = ["wgpu"] }
serde_json = "1.0"  # used by omc-kernel for wire-format messages
# inkwell is needed at the CLI level only because we leak the LLVM
# Context for process-lifetime; the dispatch closure lives on the
# Interpreter and references the engine memory.
inkwell = { version = "0.5", features = ["llvm18-0"], optional = true }
