[package]
name = "omnimcode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OMNIcode - Core Library for Harmonic Computing Language"
documentation = "https://docs.rs/omnimcode-core"
repository = "https://github.com/sovereignlattice/omnimcode"
readme = "README.md"

[[bin]]
name = "omnimcode-standalone"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
regex = "1.10"
thiserror = "1.0"
# Optional Python embedding: when the `python-embed` feature is on,
# OMC programs gain `py_import` / `py_call` / etc. and can drive any
# CPython library (numpy, pandas, requests, ...). Off by default so
# building OMC requires no Python toolchain.
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }

[features]
default = []
ffi = []
serialization = []
# Embed CPython for `py_*` builtins. Requires libpython at link time
# (pyo3 auto-detects via PYO3_PYTHON / `python3-config --prefix`).
python-embed = ["dep:pyo3"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "genetic_algorithm_bench"
harness = false

[[bench]]
name = "interpreter_bench"
harness = false
