[package]
name = "omnimcode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OMNIcode - Core Library for Harmonic Computing Language"
documentation = "https://docs.rs/omnimcode-core"
repository = "https://github.com/sovereignlattice/omnimcode"
readme = "README.md"

[[bin]]
name = "omnimcode-standalone"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
regex = "1.10"
thiserror = "1.0"
# Embedded CPython is now mandatory: OMC programs gain `py_import` /
# `py_call` / etc. out of the box. Building requires libpython at link
# time (pyo3 auto-detects via PYO3_PYTHON / `python3-config --prefix`).
# Set PYO3_USE_ABI3_FORWARD_COMPATIBILITY=1 if your Python is newer
# than pyo3's max supported version.
pyo3 = { version = "0.23", features = ["auto-initialize"] }

[features]
default = []
ffi = []
serialization = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "genetic_algorithm_bench"
harness = false

[[bench]]
name = "interpreter_bench"
harness = false
