[package]
name = "omnimcode-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OMNIcode - Core Library for Harmonic Computing Language"
documentation = "https://docs.rs/omnimcode-core"
repository = "https://github.com/sovereignlattice/omnimcode"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
regex = "1.10"
thiserror = "1.0"
# v0.9.3 Axis 3 — aged-tier memory compression. Used by the MemoryStore
# `compact_namespace` operation to rewrite old pool bodies as zlib-deflated
# blobs. Adds <100KB to the binary.
flate2 = { version = "1.0", default-features = false, features = ["rust_backend"] }
serde_json = "1.0"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["clock", "std"], default-features = false }
# Embedded CPython — required for the desktop standalone binary
# (always-on py_import/py_call/etc.), optional for downstream
# crates that target WASM or no_std where libpython can't link.
#
# Behind the `python-embed` feature which is in `default`, so
# `cargo build` of the standalone gets it without flags. WASM /
# embedded users build with `--no-default-features`.
#
# Set PYO3_USE_ABI3_FORWARD_COMPATIBILITY=1 if your Python is newer
# than pyo3's max supported version.
pyo3 = { version = "0.23", features = ["auto-initialize"], optional = true }

[features]
# Default-on for desktop. Downstream WASM / no_std crates select
# `default-features = false` to get a Python-free OMC core.
default = ["python-embed"]
python-embed = ["dep:pyo3"]
ffi = []
serialization = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "genetic_algorithm_bench"
harness = false

[[bench]]
name = "interpreter_bench"
harness = false
